fixed submit button spacing, changed section heading

--- a/stylesheets/about_edit.scss
+++ b/stylesheets/about_edit.scss
@@ -73,14 +73,3 @@
 		padding-left: 10px;
 	}
 }
-
-
-button {
-	
-	.btn-block {
-		#edit-submit {
-			margin-top: 50px;
-			margin-bottom: 50px;
-		}
-	}
-}
